Bug 1379266 - Tweak -moz-win-accentcolortext formula to better match native title bars. r=jimm

MozReview-Commit-ID: 9unrhFI3sWh

--HG--
extra : rebase_source : 096198d640ee39c87d8495fe6e6e872544aa6478